gradient all the things

--- a/assets/stylus/modules/_main.styl
+++ b/assets/stylus/modules/_main.styl
@@ -1,6 +1,12 @@
+html {
+  height: 100%;
+}
+
 body {
+min-height: 100%;
   font: 2rem/1.5 "PT Sans", sans-serif;
-  background-color: $color-background;
+  // background-image: linear-gradient(to right top, #050537, #3e2b64, #795094, #ba79c3, #ffa4f2);
+  background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
   color: $color-black;
 }
 
